[gd_scene load_steps=10 format=3 uid="uid://dibdsssnuxfnm"]

[ext_resource type="Script" uid="uid://bukbfkh0ps2jj" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dwpor8ysmj7fj" path="res://enemy1.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bnjpgg1an1tg" path="res://player.tscn" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://bfei5kn4prvxv" path="res://bubble-boy-arts/Chao.jpg" id="4_1bvp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(2158, 1220.5)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lquwl"]
normal = Vector2(-1, 0)
distance = 141.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7mycd"]
distance = -946.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_272bh"]
normal = Vector2(1, 0)
distance = -399.67

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5vw27"]
normal = Vector2(0, 1)
distance = -228.0

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_1bvp3")

[node name="Player" parent="." node_paths=PackedStringArray("gameAreaColision") instance=ExtResource("2_h2yge")]
position = Vector2(600, 322)
gameAreaColision = NodePath("../AreaGame/CollisionShape2D")

[node name="Camera2D" type="Camera2D" parent="Player"]
scale = Vector2(0.6, 0.6)
limit_left = -1400
limit_top = -1200
limit_right = 11600
limit_bottom = 1900
limit_smoothed = true
editor_draw_limits = true

[node name="Label" type="Label" parent="Player/Camera2D"]
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
offset_left = -918.0
offset_top = -472.0
offset_right = -672.345
offset_bottom = -415.0
text = "aaaaaaaaaaaaa"

[node name="RichTextLabel" type="RichTextLabel" parent="Player/Camera2D"]
offset_left = -918.0
offset_top = -472.0
offset_right = -585.0
offset_bottom = -368.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 40
text = "aaaaaaa"

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D"]
visible = false
z_index = 6
offset_left = -1068.0
offset_top = -628.0
offset_right = 1002.0
offset_bottom = 640.0
color = Color(0.870588, 0, 0.0784314, 0.403922)

[node name="RichTextLabel2" type="RichTextLabel" parent="Player/Camera2D/ColorRect"]
layout_mode = 0
offset_left = 645.0
offset_top = 445.333
offset_right = 1369.0
offset_bottom = 581.333
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 100
text = "Perdeu otario"
fit_content = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(600, 325.335)

[node name="Map" type="TextureRect" parent="."]
z_index = -2
offset_left = -448.0
offset_top = -265.0
offset_right = 1753.0
offset_bottom = 1017.0
texture = ExtResource("4_1bvp3")
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(2201, 0)

[node name="AreaGame" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaGame"]
visible = false
position = Vector2(1096, 634.75)
shape = SubResource("RectangleShape2D_lquwl")
disabled = true
debug_color = Color(0.338347, 0.881108, 1, 0.42)

[node name="paredes" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="paredes"]
position = Vector2(1842, 401)
shape = SubResource("WorldBoundaryShape2D_lquwl")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="paredes"]
shape = SubResource("WorldBoundaryShape2D_7mycd")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="paredes"]
shape = SubResource("WorldBoundaryShape2D_272bh")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="paredes"]
shape = SubResource("WorldBoundaryShape2D_5vw27")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
